Fixed alignment of cards

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,8 @@
 .logo-size{
     width: 200px;
-    height: 200px;
+    cursor: pointer;
+}
+
+.logo-size:hover{
+    opacity: 0.8
 }
