--- a/src/app/find-opportunities/find-opportunities.component.css
+++ b/src/app/find-opportunities/find-opportunities.component.css
@@ -77,6 +77,10 @@
     margin-left: 250px;
 }
 
+.individual-card {
+    margin-left: 130px;
+}
+
 .bio {
     margin-top: -150px
 }
