--- a/src/app/individual-component/individual-component.component.css
+++ b/src/app/individual-component/individual-component.component.css
@@ -16,6 +16,11 @@
 .individual-name-bio {
     margin-left: 250px;
 }
+
+.individual-card {
+    margin-left: 130px;
+}
+
 .bio {
     margin-top: -150px
 }
